testsuite/vir/error/error/compile/01_statements.trieste
vbcc
statements
(top
  {}
  (func
    (functionid 5:@main)
    (params)
    (i32)
    (vars)
    (labels))
  (labelid 5:^main)
  (const
    (localid 2:$a)
    (i32)
    (int 2:99))
  (arrayrefconst
    (localid 4:$ref)
    (arg
      (argcopy)
      (localid 2:$a))
    (int 1:0))
  (ret
    (localid 2:$a)))
